# verilog_parser

./: .gitignore  CMakeLists.txt  README.md
src/: create_fau.c  create_verilog.c  data2.h  main.c  main.cpp  parser.py  test_create.c  verilog_parser.cpp  verilog_parser.h
